updates to stylesheet to correct misaligned elements on Modal for star location as well as the post date

--- a/client/assets/styles/styles.scss
+++ b/client/assets/styles/styles.scss
@@ -118,7 +118,7 @@ body,
 }
 #favoriteButton {
   position: relative;
-  right: -495px;
+  right: -340px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -133,7 +133,7 @@ body,
 }
 #postDate {
   position: relative;
-  left: -570px;
+  left: -370px;
 }
 #filterOptions {
   display: flex;
